Fix API Gateway passthrough wildcard
